# franka_twin

./: package.xml  setup.cfg  setup.py
franka_twin/: __init__.py  franka_joint_publisher.py  franka_twin_node.py
launch/: franka_joint_publisher.launch.py
resource/: franka_twin
