<?xml version="1.0"?>
<package format="3">
  <name>franka_twin</name>
  <version>0.0.1</version>
  <description>Franka twin package scaffold.</description>

  <maintainer email="zdli@ucsc.edu">Zi Tao Li</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
